@@ -3,6 +3,10 @@ v 0.9.1
 - Refactor rake tasks
 - Source Code uri in fedorarpms, points to pkgs.fp.o gitweb
 - Add first integration tests
+- Retrieve commit data via Pkgwat
+- Show name of last packager in fedorarpms#show
+- Show last commit message in fedorarpms#show
+- Show last commit date in fedorarpms#show
 
 v 0.9.0
 
